# ftbq-sort

./: .gitignore  README.md  README_en.md  pyproject.toml
ftbq_sort/: graph_sorter.py  lang_sorter.py  main.py  snbt_parser.py
